# reader

./: CMakeLists.txt
DebugView/: CMakeLists.txt
DebugView/src/: main.cpp  pch.h
cmake/: toolchain.armhf
doc/: CF-E714_eng.doc  UHF RFID Reader Series User Manual V2.20.doc
libs/: CMakeLists.txt
libs/mongoose/: CMakeLists.txt  mongoose.c  mongoose.h
libs/mongoose-7.22/: CMakeLists.txt
libs/parson/: CMakeLists.txt  parson.c  parson.h
node_gpio/: CMakeLists.txt  main.cpp
node_test/: CMakeLists.txt  main.cpp
notes/: fast1.txt  fast_resp.txt  gpio.csv  inventory_commands.txt  inventory_commands2.txt  inventory_responses.txt
reader3/: CMakeLists.txt
reader3/src/: BeepPwm.cpp  BeepPwm.h  JsonCmd.cpp  JsonCmd.h  ReaderService.cpp  ReaderService.h  VisitProcess.cpp  VisitProcess.h  WebRequests.h  WebServer.cpp  WebServer.h  app.cpp  app.h  app0.cpp  app0.h  app1.cpp  app1.h  base64.c  cfmu804.cpp  cfmu804.h  cfmu804_commands.cpp  cfmu804_def.cpp  config.h  epc.cpp  epc.h  global.h  gpio.cpp  gpio.h  gpioButton.cpp  gpioButton.h  gpioTakeOnMe.cpp  main.cpp  pch.h  processRunner.cpp  processRunner.h  recordFile.cpp  recordFile.h  rfid.cpp  rfid.h  root.cpp  (+11 more)
reader3/src/api/: ApiDeclare.inc  ApiDefine.inc  ApiMap.inc  CommandHandler.cpp  CommandHandler.h  IpcRequest.cpp  IpcRequests.h  MqClient.cpp  MqClient.h  MqServer.cpp  MqServer.h
reader3/src/battery/: Battery.cpp  Battery.h
reader3/src/beep/: BeepService.cpp  BeepService.h
reader3/src/io/: BeepPwm.cpp  BeepPwm.h  gpio.cpp  gpio.h  gpioButton.cpp  gpioButton.h  gpioTakeOnMe.cpp  i2c.cpp  i2c.h  serial.cpp
reader3/src/leds/: LedApi.cpp  LedApi.h  LedService.cpp  LedService.h
reader3/src/main/: Service.cpp  Service.h  main.cpp
reader3/src/rfid/: JsonCmdRfid.cpp  ReaderService.cpp  VisitProcess.cpp  VisitProcess.h  cfmu804.h  cfmu804_commands.cpp  cfmu804_def.cpp  recordFile.cpp  recordFile.h  rfid.cpp  rfid.h  simulator.cpp  simulator.h
reader3/src/tests/: TestMq.cpp  TestWeb.cpp  Tester.cpp  testTimers.cpp  tests.cpp  tests.h
reader3/src/util/: Service.h  base64.h  timers.cpp  timers.h  z_json.h
reader3/src/web/: JsonCmd.cpp  JsonCmd.h  WebRequests.h  WebServer.cpp  WebServer.h
schematic/rfidbox/: fp-info-cache  rfidbox.kicad_pcb  rfidbox.kicad_prl  rfidbox.kicad_pro  rfidbox.kicad_sch
scripts/: val.sh
tests/: CMakeLists.txt
tests/hex_dump/: CMakeLists.txt
tests/test_curl/: CMakeLists.txt  test_curl.cpp
tests/test_factory/: CMakeLists.txt  test_fact.cpp
tests/test_gpio/: CMakeLists.txt  test_gpio.c
tests/test_gpio_button/: CMakeLists.txt  test_gpio_button.cpp
tests/test_lock_file/: CMakeLists.txt  lockfile.c  lockfile.cpp
tests/test_logging/: CMakeLists.txt  test_logging.c
tests/test_mongoose/: CMakeLists.txt  main.c  main.old.cxx
tests/test_nodejs/: CMakeLists.txt
tests/test_serial/: CMakeLists.txt  test_serial.c
zipolib/: CMakeLists.txt
zipolib/include/zipolib/: Windows_zipo.h  cgi.h  csv_files.h  http_status.h  lockfile.h  lws_config.h  parse.h  parse_cfg.h  parse_cfg_values.h  parse_json.h  parse_objs.h  parse_result.h  parse_xml.h  parser.h  ptypes_cset.h  tinyutf8.h  z_console.h  z_directory.h  z_error.h  z_exception.h  z_factory.h  z_factory_cc.h  z_factory_controller.h  z_factory_features.h  z_factory_macros.h  z_factory_map.h  z_factory_node.h  z_factory_vector.h  z_file.h  z_filesystem.h  z_log.h  z_log_old.h  z_lws.h  z_map.h  z_obj_list.h  z_os_specific.h  z_parse_text.h  z_safe_map.h  z_safe_queue.h  z_semaphore.h  (+14 more)
zipolib/old/: z_log.cpp
zipolib/src/: cgi.cpp  csv_files.cpp  http_status.c  lockfile.cpp  parse.cpp  parse_cfg.cpp  parse_cfg_values.cpp  parse_json.cpp  parse_objs.cpp  parse_xml.cpp  parser.cpp  pch.cpp  pch.h  pcset.cpp  strptime.cpp  tinyutf8.cpp  z_console.cpp  z_directory.cpp  z_exception.cpp  z_factory.cpp  z_factory_controller.cpp  z_factory_features.cpp  z_factory_map.cpp  z_factory_node.cpp  z_factory_vector.cpp  z_file.cpp  z_filesystem.cpp  z_log.cpp  z_lws.cpp  z_lws_http.cpp  z_os_specific.cpp  z_parse_text.cpp  z_status.cpp  z_stream.cpp  z_stream_json.cpp  z_string.cpp  z_strlist.cpp  z_terminal.cpp  z_terminal_keys.cpp  z_time.cpp  (+3 more)
